--- a/day27/style.css
+++ b/day27/style.css
@@ -27,18 +27,19 @@ body {
 }
 #toasts {
   position: fixed;
-  bottom: 10px;
-  right: 10px;
+  top: 10px;
   display: flex;
   flex-direction: column;
   align-items: flex-end;
 }
 .toast {
+  opacity: 0;
+  transform: translateY(-100%);
   background-color: #fff;
   border-radius: 5px;
   padding: 1rem 2rem;
   margin: 0.5rem;
-  transition: 0.5s;
+  transition: opacity 0.4s, transform 0.3s;
 }
 
 .toast.info {
